bk_ida/gccida/c0/fixup_stack_1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_stack_1/src/function.c:3130:26: error: use of undeclared identifier 'machine_mode'
if ( memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), ad) ) 
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_stack_1/src/function.c:3130:41: error: expected expression
if ( memory_address_p( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), ad) ) 
                                        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/fixup_stack_1/src/obj/function.o] Error 1
